static/css/homepage.css
.carousel {
  display: flex;
  justify-content: center;
  padding-bottom: 15px;
  margin-top: 20px;
}

.carousel-inner {
  height: 550px;
  width: 1300px;
}

.react-container {
justify-content: center;
}

.cards-container {
  max-width: 1400px;
  justify-content: center;
  margin: 20px auto 0 auto;
}

/* national park cards css */
div.card {
  padding: 5px;
  margin: 0px 4px 0 4px;
  width: 20em;
  height: 20em;
  display: inline-block;
  background-color: #FFF9F9;
  border: none;
}

p.park-name {
  width: 20em;
  text-align: center;
  font-size: 1em;
  display: table-cell;
  vertical-align: middle;
  font-family: 'Montserrat', sans-serif;
}

img.park-img {
  width: 100%;
  height: 220px;
  object-fit: cover;
  margin-bottom: 18px;
}

